[package]
name = "gene-mutual-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gene_mutual_info"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
numpy = "0.25.0"
ndarray = "0.16.1"
rayon = "1.8.0"
thiserror = "1.0.0"
indicatif = "0.17.0"
