[package]
name = "gvmi"
version = "0.1.0"
edition = "2021"
description = "GeneVector Mutual Information - High-performance gene expression mutual information computation"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/gvmi"
keywords = ["bioinformatics", "mutual-information", "gene-expression", "single-cell"]
categories = ["science", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gvmi"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module"] }
numpy = "0.25.0"
ndarray = "0.16.1"
rayon = "1.8.0"
thiserror = "1.0.0"
indicatif = "0.17.0"
